<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:layout_marginTop="100dp"
android:layout_marginBottom="75dp"
tools:context="training.squads.fitnessapp.fitnessFormulas.FitnessFormulasFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/border"
                android:gravity="center"
                app:layout_constraintBottom_toTopOf="@id/standard_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="12dp"
                    android:paddingBottom="6dp"
                    android:text="@string/trial_text"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="6dp"
                    android:paddingBottom="12dp"
                    android:text="@string/free_text"
                    android:textColor="@color/custom_red_normal"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background"
                    android:gravity="center"
                    android:paddingTop="12dp"
                    android:paddingBottom="3dp"
                    android:text="@string/one_workout_text" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background"
                    android:gravity="center"
                    android:paddingTop="3dp"
                    android:paddingBottom="12dp"
                    android:text="@string/one_yoga_text" />

            </TableLayout>

            <TableLayout
                android:id="@+id/standard_text"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/border"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="12dp"
                    android:paddingBottom="6dp"
                    android:text="@string/standard_text"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingTop="6dp"
                        android:paddingBottom="12dp"
                        android:text="@string/euro_text"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingTop="6dp"
                        android:paddingBottom="12dp"
                        android:text="@string/price_70_text"
                        android:textColor="@color/custom_green_normal"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingTop="6dp"
                        android:paddingBottom="12dp"
                        android:text="@string/month_text"
                        android:textStyle="bold" />
                </TableRow>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background"
                    android:gravity="center"
                    android:paddingTop="12dp"
                    android:paddingBottom="3dp"
                    android:text="@string/multiple_workouts_text" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background"
                    android:gravity="center"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp"
                    android:text="@string/multiple_yoga_text" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background"
                    android:gravity="center"
                    android:paddingTop="3dp"
                    android:paddingBottom="12dp"
                    android:text="@string/coaching_text" />

            </TableLayout>

            <TableLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/standard_text">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="12dp"
                    android:paddingBottom="6dp"
                    android:text="@string/flexible_text"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingTop="6dp"
                        android:paddingBottom="12dp"
                        android:text="@string/euro_text"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingTop="6dp"
                        android:paddingBottom="12dp"
                        android:text="@string/price_100_text"
                        android:textColor="@color/custom_yellow_normal"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingTop="6dp"
                        android:paddingBottom="12dp"
                        android:text="@string/once_text"
                        android:textStyle="bold" />
                </TableRow>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background"
                    android:gravity="center"
                    android:paddingTop="3dp"
                    android:paddingBottom="3dp"
                    android:text="@string/ten_workouts_text" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background"
                    android:gravity="center"
                    android:paddingTop="12dp"
                    android:paddingBottom="3dp"
                    android:text="@string/ten_yoga_text" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background"
                    android:gravity="center"
                    android:paddingTop="3dp"
                    android:paddingBottom="12dp"
                    android:text="@string/coaching_text" />

            </TableLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>